# nginx-master

./: CMakeLists.txt  readme.md
auto/: cmake  configure
conf/: nginx.conf
conf/x-waf/: access.lua  config.lua  hello.lua  util.lua  waf.lua
extend/lua-nginx-module-0.10.22/src/: ngx_http_lua_headers_in.c  ngx_http_lua_ndk.c
objs/: Makefile  autoconf.err  ngx_auto_config.h  ngx_modules.c
package/: lua-resty-core-master.rar  lua-resty-lrucache-master.rar
