
cmake_minimum_required(VERSION 3.6)

include_directories(
    .
    src/core 
	src/event 
	src/event/modules 
	src/os/unix 
	./extend/ngx_devel_kit-0.3.0/objs 
	objs/addon/ndk 
	./extend/lua-nginx-module-0.10.22/src/api 
	objs 
	src/http 
	src/http/modules 
	./extend/ngx_devel_kit-0.3.0/src 
	./extend/ngx_devel_kit-0.3.0/src 
	./extend/ngx_devel_kit-0.3.0/objs 
	objs/addon/ndk 
	/usr/local/LuaJIT/include/luajit-2.1)
set(CMAKE_C_FLAGS "-I/usr/local/LuaJIT/include/luajit-2.1  -pipe  -O -W -Wall -Wpointer-arith -Wno-unused-parameter -Werror -g  -DNDK_SET_VAR")
set(SOURCE_FILES
    objs/ngx_modules.c
    src/core/nginx.c 
	src/core/ngx_log.c 
	src/core/ngx_palloc.c 
	src/core/ngx_array.c 
	src/core/ngx_list.c 
	src/core/ngx_hash.c 
	src/core/ngx_buf.c 
	src/core/ngx_queue.c 
	src/core/ngx_output_chain.c 
	src/core/ngx_string.c 
	src/core/ngx_parse.c 
	src/core/ngx_parse_time.c 
	src/core/ngx_inet.c 
	src/core/ngx_file.c 
	src/core/ngx_crc32.c 
	src/core/ngx_murmurhash.c 
	src/core/ngx_md5.c 
	src/core/ngx_sha1.c 
	src/core/ngx_rbtree.c 
	src/core/ngx_radix_tree.c 
	src/core/ngx_slab.c 
	src/core/ngx_times.c 
	src/core/ngx_shmtx.c 
	src/core/ngx_connection.c 
	src/core/ngx_cycle.c 
	src/core/ngx_spinlock.c 
	src/core/ngx_rwlock.c 
	src/core/ngx_cpuinfo.c 
	src/core/ngx_conf_file.c 
	src/core/ngx_module.c 
	src/core/ngx_resolver.c 
	src/core/ngx_open_file_cache.c 
	src/core/ngx_crypt.c 
	src/core/ngx_proxy_protocol.c 
	src/core/ngx_syslog.c 
	src/event/ngx_event.c 
	src/event/ngx_event_timer.c 
	src/event/ngx_event_posted.c 
	src/event/ngx_event_accept.c 
	src/event/ngx_event_udp.c 
	src/event/ngx_event_connect.c 
	src/event/ngx_event_pipe.c 
	src/os/unix/ngx_time.c 
	src/os/unix/ngx_errno.c 
	src/os/unix/ngx_alloc.c 
	src/os/unix/ngx_files.c 
	src/os/unix/ngx_socket.c 
	src/os/unix/ngx_recv.c 
	src/os/unix/ngx_readv_chain.c 
	src/os/unix/ngx_udp_recv.c 
	src/os/unix/ngx_send.c 
	src/os/unix/ngx_writev_chain.c 
	src/os/unix/ngx_udp_send.c 
	src/os/unix/ngx_udp_sendmsg_chain.c 
	src/os/unix/ngx_channel.c 
	src/os/unix/ngx_shmem.c 
	src/os/unix/ngx_process.c 
	src/os/unix/ngx_daemon.c 
	src/os/unix/ngx_setaffinity.c 
	src/os/unix/ngx_setproctitle.c 
	src/os/unix/ngx_posix_init.c 
	src/os/unix/ngx_user.c 
	src/os/unix/ngx_dlopen.c 
	src/os/unix/ngx_process_cycle.c 
	src/event/modules/ngx_select_module.c 
	src/event/modules/ngx_poll_module.c 
	src/core/ngx_regex.c 
	src/http/ngx_http.c 
	src/http/ngx_http_core_module.c 
	src/http/ngx_http_special_response.c 
	src/http/ngx_http_request.c 
	src/http/ngx_http_parse.c 
	src/http/modules/ngx_http_log_module.c 
	src/http/ngx_http_request_body.c 
	src/http/ngx_http_variables.c 
	src/http/ngx_http_script.c 
	src/http/ngx_http_upstream.c 
	src/http/ngx_http_upstream_round_robin.c 
	src/http/ngx_http_file_cache.c 
	src/http/ngx_http_write_filter_module.c 
	src/http/ngx_http_header_filter_module.c 
	src/http/modules/ngx_http_chunked_filter_module.c 
	src/http/modules/ngx_http_range_filter_module.c 
	src/http/modules/ngx_http_gzip_filter_module.c 
	src/http/ngx_http_postpone_filter_module.c 
	src/http/modules/ngx_http_ssi_filter_module.c 
	src/http/modules/ngx_http_charset_filter_module.c 
	src/http/modules/ngx_http_userid_filter_module.c 
	src/http/modules/ngx_http_headers_filter_module.c 
	src/http/ngx_http_copy_filter_module.c 
	src/http/modules/ngx_http_not_modified_filter_module.c 
	src/http/modules/ngx_http_static_module.c 
	src/http/modules/ngx_http_autoindex_module.c 
	src/http/modules/ngx_http_index_module.c 
	src/http/modules/ngx_http_mirror_module.c 
	src/http/modules/ngx_http_try_files_module.c 
	src/http/modules/ngx_http_auth_basic_module.c 
	src/http/modules/ngx_http_access_module.c 
	src/http/modules/ngx_http_limit_conn_module.c 
	src/http/modules/ngx_http_limit_req_module.c 
	src/http/modules/ngx_http_geo_module.c 
	src/http/modules/ngx_http_map_module.c 
	src/http/modules/ngx_http_split_clients_module.c 
	src/http/modules/ngx_http_referer_module.c 
	src/http/modules/ngx_http_rewrite_module.c 
	src/http/modules/ngx_http_proxy_module.c 
	src/http/modules/ngx_http_fastcgi_module.c 
	src/http/modules/ngx_http_uwsgi_module.c 
	src/http/modules/ngx_http_scgi_module.c 
	src/http/modules/ngx_http_memcached_module.c 
	src/http/modules/ngx_http_empty_gif_module.c 
	src/http/modules/ngx_http_browser_module.c 
	src/http/modules/ngx_http_upstream_hash_module.c 
	src/http/modules/ngx_http_upstream_ip_hash_module.c 
	src/http/modules/ngx_http_upstream_least_conn_module.c 
	src/http/modules/ngx_http_upstream_random_module.c 
	src/http/modules/ngx_http_upstream_keepalive_module.c 
	src/http/modules/ngx_http_upstream_zone_module.c 
	./extend/ngx_devel_kit-0.3.0/src/ndk.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_script.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_log.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_subrequest.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_ndk.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_control.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_time.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_misc.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_variable.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_string.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_output.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_headers.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_req_body.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_uri.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_args.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_ctx.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_regex.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_module.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_headers_out.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_headers_in.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_directive.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_consts.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_exception.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_util.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_cache.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_contentby.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_rewriteby.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_accessby.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_setby.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_capturefilter.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_clfactory.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_pcrefix.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_headerfilterby.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_shdict.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_socket_tcp.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_api.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_logby.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_sleep.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_semaphore.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_coroutine.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_bodyfilterby.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_initby.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_initworkerby.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_exitworkerby.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_socket_udp.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_req_method.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_phase.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_uthread.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_timer.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_config.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_worker.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_ssl_client_helloby.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_ssl_certby.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_ssl_ocsp.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_lex.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_balancer.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_ssl_session_storeby.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_ssl_session_fetchby.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_ssl.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_log_ringbuf.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_input_filters.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_pipe.c 
	./extend/lua-nginx-module-0.10.22/src/ngx_http_lua_worker_thread.c)


add_executable(nginx ${SOURCE_FILES})


target_link_libraries(nginx -Wl,--export-all-symbols -Wl,-E crypt -L/usr/local/LuaJIT/lib luajit-5.1 m dl pcre z)

